# distilabel-workbench

./: .gitignore  README.md  launch.json
dibt/: generate_reference_spin.py  prepare_for_training.py
dibt/dpo/: README.md
dibt/notebooks/: IAA_prompt_collective.ipynb  combine_datasets.ipynb
dibt/spin/: README.md  generate_iter_spin.py  prepare_for_training.py
disticoder/: README.md  oss_instruct_pref_v2.py  push_to_argilla.py  review-disticoder.ipynb
helm-instruct/: criterion.py  evaluator.py
helm_instruct/: criterion.py  data.py  main.py  requirements.txt
projects/argilla-sdk-bot/: docs_dataset.py  pipeline_docs_queries.py  requirements.txt  requirements_docs_dataset.txt  sdk_docs_dataset.ipynb  train-embedding.ipynb
projects/criticon/: README.md  finetune.sh  finetune_full.sh  finetune_full_v2.sh  prepare_ds.py
projects/deita/: main.py  requirements.txt
projects/farming/: app.py  dataset_manipulation.ipynb  embed.py  hub.py  pipe_agriculture.py  push.py  requirements.txt
projects/fine-preferences/: README.md  pipeline.py
projects/function_calling_dataset/: config.yaml  main.py  pyproject.toml  wrangle.ipynb
projects/function_calling_dataset/src/: benchmark.py  functionary.py  pipelines.py  utils.py
projects/function_calling_dataset/templates/: functionresponses.jinja2  instructions.jinja2
projects/helm_instruct/: evaluator.py  main.py  requirements.txt
projects/openhermes-dpo/: README.md  draft-openhermes-dpo.ipynb  openhermes-gen-vllm.py
scripts/function_calling_dataset/: combine_datasets.ipynb  config.yaml  main.py  outlines.ipynb  (+2 more)
(+87 files in other folders)
